# JupyterPilot

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/api/: codetocell.py
src/jupyterpilot/: pysetup.py
src/jupyterpilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
