[metadata]
name = jupyterpilot
version = 1.0.0
author = Eeshan
author_email = mishra.eeshan@gmail.com
description = JupyterPilot is a Python package that uses the OpenAI API to generate code from natural language prompts. It is designed to simplify the process of writing code and to make programming more accessible to non-programmers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ishu121992/JupyterPilot
project_urls = 
Bug Tracker = https://github.com/ishu121992/JupyterPilot/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
python_requires = >=3.7
install_requires =
   openai
package_dir = 
	= src
packages = find:
[options.packages.find]
where=src